<resources>
    <string name="app_name">Davai</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="numero">25</string>
    <string name="nada">nada</string>
    <string name="generico">generico</string>

    <!--          LOGIN INICIAL              -->
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="nao_possuo_cadastro"><u>Não Tem Cadastro?</u></string>
    <string name="esqueceu_a_senha"><u>Esqueceu a Senha?</u></string>
    <string name="sign_in">Sign In</string>

    <!--          CADASTRO              -->
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="email">Email</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="outros">Outros</string>
    <string name="cidade">Cidade</string>

    <!--         TESTE MUSICAL              -->
    <string name="voce_toca_algum_instrumento_musical">Você toca algum instrumento musical?</string>
    <string name="habilidade_no_instrumento">Habilidade no instrumento</string>
    <string name="escolha_suas_bandas">Escolha suas bandas favoritas</string>
    <string name="proximo">PRÓXIMO</string>
    <string name="meus_generos">Meus gêneros preferidos</string>
    <string name="qual_genero_musical_voce_gosta">Quais gêneros musicais você gosta?</string>


    <!--          SIDEBAR              -->
    <string name="open">Abrir sidebar</string>
    <string name="close">Fechar sidebar</string>

    <!--          CONFIGURAÇÕES              -->
    <string name="editar_perfil">Editar Perfil</string>
    <string name="minha_agenda">Minha Agenda</string>
    <string name="configuracoes">Configurações</string>
    <string name="trocar_usuario">Trocar de usuário</string>
    <string name="sobre_o_app">Sobre o app</string>
    <string name="configurar_banda">Configurar Banda</string>
    <string name="socio_musical">Sócio Musical</string>
    <string name="fale_conosco">Fale Conosco</string>
    <string name="avalie_app">Avalie o App</string>
    <string name="deletar_conta">Deletar Conta</string>
    <string name="logout">Logout</string>
    <string name="outras_opcoes">Outras Opções</string>
    <string name="privacidade">Privacidade</string>
    <string name="permitir_notificacoes">Permitir Notificações</string>
    <string name="mostrar_minha_localizacao">Mostrar Minha Localização</string>
    <string name="filtro_distancia_dos_usuarios">Filtro de Distância</string>


    <!--         AVALIE O APP               -->
    <string name="o_que_achou_cadastro">O que você achou do Cadastro?</string>
    <string name="o_que_achou_ideia">O que você achou da ideia do aplicativo?</string>
    <string name="o_que_achou_aparencia">O que você achou da aparência visual do aplicativo?</string>
    <string name="o_que_achou_funcionalidade">O que você achou das funcionalidades do aplicativo?</string>
    <string name="voce_usaria">Você usaria esse aplicativo?</string>
    <string name="nota_geral">Qual sua nota geral para o aplicativo?</string>
    <string name="salvar">Salvar</string>

    <!--          MAIN              -->
    <string name="rockit">RockIT</string>
    <string name="pessoas_com_perfis_similares">Pessoas com perfis similares</string>
    <string name="bandas_em_destaque">Bandas em Destaque</string>

    <!--          BOTTOM              -->
    <string name="eventos">Eventos</string>
    <string name="cadastrar_banda">Cadastrar Banda</string>
    <string name="menu">Menu</string>
    <string name="bandas">Bandas</string>
    <string name="chat">Chat</string>
    <string name="procurar_banda">Procurar Banda</string>
    <string name="tutorial">Tutorial de como fazer sucesso</string>


    <!--          PERFIL DO USUÁRIO              -->
    <string name="nome_usuario">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="sua_descricao">Escreva sua descrição</string>
    <string name="bandas_favoritas">Bandas Favoritas</string>
    <string name="instrumentos">Instrumentos</string>
    <string name="shows_usuario">Últimos Shows que foi/tocou</string>
    <string name="contato">Contato Whatsapp</string>
    <string name="videos_musicas">Vídeos/Músicas</string>
    <string name="idade">Idade</string>
    <string name="arroba">\@</string>
    <string name="pais">País</string>
    <string name="numero_whats">Número do Whatsapp</string>
    <string name="conta_instagram">Nome da Conta</string>
    <string name="meu_instagram">Meu Instagram</string>
    <string name="meu_whatsapp">Meu Whatsapp</string>

    <!--          BANDA              -->
    <string name="nome_banda">Nome da Banda</string>
    <string name="generos">Gêneros</string>
    <string name="tags">Tags</string>
    <string name="imagem_banda">Imagem da banda selecionada pelo usuário</string>
    <string name="tags_banda">Rock, Metal Progressivo, Pagode Japones</string>
    <string name="descricao_banda">Descrição da Banda</string>
    <string name="agenda_shows_banda">Agenda de Shows</string>
    <string name="contato_banda">Contato:</string>
    <string name="musicas_banda">Músicas</string>
    <string name="videos_banda">Videos</string>
    <string name="avalie_a_banda">Avalie a Banda:</string>
    <string name="suas_bandas">Suas Bandas</string>
    <string name="link">Link</string>

    <!--          FILTROS              -->
    <string name="filtros">FILTROS</string>
    <string name="ambos">Ambos</string>
    <string name="somente_mulheres">Somente Mulheres</string>
    <string name="somente_homens">Somente Homens</string>
    <string name="grau_de_afinidade_musical">Grau de Afinidade Musical</string>
    <string name="instrumentos_praticados">Instrumentos Praticados:</string>
    <string name="habilidade_musical">Habilidade Musical</string>

    <!--          IMAGENS              -->
    <string name="todo">TODO</string>

    <!--          SOBRE NÓS              -->
    <string name="sobre_nos">\t\tNós somos a RockIT, um aplicativo com o propósito de incentivar a formação e desenvolvimento de Bandas no Brasil.
                            Além disso, você pode encontrar outras pessoas com o mesmo perfil musical que você.
                            \n\t\t Aqui você pode escutar e conhecer bandas novas e bem pertinho de onde você mora, e avaliar e comentar a respeito
                            dos músicos locais.\n
                            \nNossa equipe é formada por estudantes da Unicamp e Unesp com muita vontade de mudar o cenário musical e
                            alavancar a carreira de músicos ao redor de todo o país, conectando-os com o público, gravadoras, estúdios,
                            casas de eventos e muito mais!!!
                            </string>
    <!--          FALE CONOSCO              -->
    <string name="assunto">Assunto</string>
    <string name="mensagem">Mensagem</string>
    <string name="enviar">Enviar</string>

    <!--          FRAGMENT PROCURAR BANDA              -->
    <string name="procurar_bandas">Procurar Bandas</string>

    <!--          FRAGMENT LISTA DE SHOWS              -->
    <string name="agenda_shows">Agenda de Shows</string>

    <!--          CADASTRO BANDAS              -->
    <string name="nome_da_banda">Nome da Banda</string>
    <string name="cidade_origem">Cidade</string>
    <string name="ano_fundacao">Ano de Fundação</string>
    <string name="Membros_da_banda">Membros da Banda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--         LIST MESSAGE OPTIONS              -->
    <string name="bloquear_usuario">Bloquear Usuário</string>

    <!--         POST MESSAGE               -->
    <string name="post">Post</string>
    <string name="posts">Posts</string>
    <string name="adicione_comentario">Adicione um comentário</string>

    <string name="type_a_message">Type a message...</string>

    <!--         TINDER               -->
    <string name="bandas_comum">Bandas Em Comum</string>

</resources>
